--- a/style/styles/portfolio.css
+++ b/style/styles/portfolio.css
@@ -17,9 +17,11 @@ header{
 
 .Niloy{
     display: flex;
-    margin: 0 100px;
     justify-content: space-between;
     align-items: center;
+    max-width: 1140px;
+    margin: 0 100px;
+
 
     
 }
@@ -43,6 +45,7 @@ header{
     text-align: center;
     margin: 120px 115px;
     font-size: 20px;
+    max-width: 1140px;
 }
 
 .stay-button{
@@ -55,4 +58,38 @@ header{
 }
 header{
     background-image: url('../../Assets/Hero-bg.png');
+}
+
+
+
+.niloy{
+    display: flex;
+    justify-content: center;
+
+    max-width: 1140px;
+    margin-top: 100px;
+   
+}
+
+.ghgh{
+    width: 489px;
+    margin-top: 62px;
+}
+.btn{
+    background-color: #4E47FF;
+    border: none;
+    border-radius: 5px;
+    color: #FFFFFF;
+    padding: 8px 15px;
+    font-size:10px ;
+
+
+}
+
+img{
+    border-radius: 48px;
+}
+
+.clr{
+    color: #252432;
 }
