--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -12,7 +12,7 @@
 }
 
 .mondal{
-    max-width: 1140px;
+    max-width: 1350px;
 
 
 }
@@ -26,6 +26,7 @@ header{
     justify-content: space-between;
     align-items: center;
     margin: 0 100px;
+    
 
 
     
@@ -149,13 +150,14 @@ img{
 
 
 .contract-container{
-    width: 850px;
+    width: 930px;
    /* background-color: ;*/
    display: flex;
    
    justify-content: space-between;
    padding: 100px 120px  ;
    margin-right: 300px;
+   margin-left: 85px;
    background-color: #eef0ff;
 
    
