fixed another image

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -65,7 +65,7 @@ header{
     color: #FFFFFF;
 }
 header{
-    background-image: url('../../Assets/Hero-bg.png');
+    background-image: url('../Assets/Hero-bg.png');
 }
 
 
